Import of SHARYANTO/Module-Patch-0.02 from CPAN.
gitpan-cpan-distribution: Module-Patch
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SHARYANTO/Module-Patch-0.02.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Module-Patch
 
+0.02    2012-04-03
+
+        - Support 'config' for per-patch-module configuration (see
+          LWP::UserAgent::patch::https_hard_timeout for example).
+
+
 0.01    2012-04-03
 
         First release. No tests yet.
