Import of SHARYANTO/Module-Patch-0.03 from CPAN.
gitpan-cpan-distribution: Module-Patch
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SHARYANTO/Module-Patch-0.03.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Module-Patch
 
+0.03    2012-04-03
+
+        - Fix conflict checking.
+
+        - Add some tests.
+
+
 0.02    2012-04-03
 
         - Support 'config' for per-patch-module configuration (see
