Import of SHARYANTO/Module-Patch-0.10 from CPAN.
gitpan-cpan-distribution: Module-Patch
gitpan-cpan-version:      0.10
gitpan-cpan-path:         SHARYANTO/Module-Patch-0.10.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,21 @@
 Revision history for Module-Patch
 
+0.10    2012-08-03 (SHARYANTO)
+
+        [INCOMPATIBLE CHANGES]
+
+        - Change patch_data format (v => 3) because we switch from using
+          Monkey::Patch to Alt::Monkey::Patch::SHARYANTO to support
+          add/replace/delete (aside from wrap). When using the latter, first
+          argument given to wrapper code is not $orig (original subroutine) but
+          $ctx (context hash, original subroutine is in $ctx->{orig}).
+
+        [ENHANCEMENTS]
+
+        - Implement add/replace/add_or_replace/delete (courtesy of
+          Alt::Monkey::Patch::SHARYANTO).
+
+
 0.09    2012-07-17 (SHARYANTO)
 
         [BUG FIXES]
