--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Module::Patch - Patch package with a set of patches
 
 VERSION
-    version 0.09
+    version 0.10
 
 SYNOPSIS
     To use Module::Patch directly:
@@ -64,8 +64,8 @@ SYNOPSIS
 
 DESCRIPTION
     Module::Patch is basically a convenient way to define and bundle a set
-    of patches. Actual patching is done by the nice Monkey::Patch, which
-    provides lexically scoped patching.
+    of patches. Actual patching is done by the nice
+    Alt::Monkey::Patch::SHARYANTO, which provides lexically scoped patching.
 
     There are two ways to use this module:
 
@@ -73,7 +73,7 @@ DESCRIPTION
 
         This is used for convenient bundling of patches. You create a *patch
         module* (a module that monkey-patches other module by
-        adding/wrapping/deleting subroutines of target module) by
+        adding/replacing/wrapping/deleting subroutines of target module) by
         subclassing Module::Patch and providing the patches_spec in
         patch_data() method.
 
@@ -107,18 +107,19 @@ FUNCTIONS
 
     $patches_spec is an arrayref containing a series of patch specification.
     Patch specification is a hashref containing these keys: "action"
-    (string, required; either 'wrap', 'add', 'delete'), "mod_version"
-    (string/regex or array of string/regex, can be ':all' to mean all
-    versions; optional; defaults to ':all'). "sub_name" (string/regex or
-    array of string/regex, subroutine(s) to patch, can be ':all' to mean all
-    subroutine, ':public' to mean all public subroutines [those not prefixed
-    by "_"], ':private' to mean all private), "code" (coderef, not required
-    if "action" is 'delete').
+    (string, required; either 'wrap', 'add', 'replace', 'add_or_replace',
+    'delete'), "mod_version" (string/regex or array of string/regex, can be
+    ':all' to mean all versions; optional; defaults to ':all'). "sub_name"
+    (string/regex or array of string/regex, subroutine(s) to patch, can be
+    ':all' to mean all subroutine, ':public' to mean all public subroutines
+    [those not prefixed by "_"], ':private' to mean all private), "code"
+    (coderef, not required if "action" is 'delete').
 
-    Die if there is conflict when patching, for example if target module has
-    been patched 'delete' and another patch wants to 'wrap' it.
+    Die if there is conflict with other patch modules (patchsets), for
+    example if target module has been patched 'delete' and another patch
+    wants to 'wrap' it.
 
-    NOTE: Action 'add', 'delete', and conflict checking not yet implemented.
+    NOTE: conflict checking with other patchsets not yet implemented.
 
     Known options:
 
@@ -128,7 +129,7 @@ FUNCTIONS
         default is to warn and skip patching.
 
 SEE ALSO
-    Monkey::Patch
+    Alt::Monkey::Patch::SHARYANTO
 
     Pod::Weaver::Plugin::ModulePatch
 
