--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Module-Patch
 
+0.11    2012-08-03 (SHARYANTO)
+
+        No functional changes. Remove Perl undef warning and tweak error
+        message.
+
+
 0.10    2012-08-03 (SHARYANTO)
 
         [INCOMPATIBLE CHANGES]
