--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Module-Patch
 
+0.13    2012-08-20 (SHARYANTO)
+
+        No functional changes. Update Synopsis [RT#79098].
+
+
 0.12    2012-08-11 (SHARYANTO)
 
         Patch module should now be named Foo::Bar::Patch::YourCategory instead
