--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Module-Patch
 
+0.15    2012-12-14 (SHARYANTO)
+
+        No functional changes. Update outdated Synopsis.
+
+
 0.14    2012-08-20 (SHARYANTO)
 
         No functional changes. Rename dependency module from
