--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Module::Patch - Patch package with a set of patches
 
 VERSION
-    version 0.14
+    version 0.15
 
 SYNOPSIS
     To use Module::Patch directly:
@@ -11,17 +11,20 @@ SYNOPSIS
 
      use Module::Patch qw(patch_package);
      use Log::Any '$log';
-     patch_package(['DBI', 'DBI::st', 'DBI::db'], [
+     my $handle = patch_package(['DBI', 'DBI::st', 'DBI::db'], [
          {action=>'wrap', mod_version=>':all', sub_name=>':public', code=>sub {
-             my $ctx      = shift;
-             my $orig_sub = shift;
+             my $ctx = shift;
+
              $log->tracef("Entering %s(%s) ...", $ctx->{orig_name}, \@_);
              my $res;
-             if (wantarray) { $res=[$orig_sub->(@_)] } else { $res=$orig_sub->(@_) }
+             if (wantarray) { $res=[$ctx->{orig}->(@_)] } else { $res=$ctx->{orig}->(@_) }
              $log->tracef("Returned from %s", $ctx->{orig_name});
              if (wantarray) { return @$res } else { return $res }
          }},
      ]);
+
+     # restore original
+     undef $handle;
 
     To create a patch module by subclassing Module::Patch:
 
@@ -81,6 +84,9 @@ DESCRIPTION
         *YourCategory* should be a keyword or phrase (verb + obj) that
         describes what the patch does. For example,
         HTTP::Daemon::Patch::IPv6, LWP::UserAgent::Patch::LogResponse.
+
+        Patch module should be use()'d, or require()'d + import()'ed instead
+        of just require()'d, because the patching is done in import().
 
     *   require/import it directly
 
