--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Module::Patch - Patch package with a set of patches
 
 VERSION
-    version 0.16
+    version 0.17
 
 SYNOPSIS
     To use Module::Patch directly:
@@ -77,7 +77,7 @@ DESCRIPTION
         This is used for convenient bundling of patches. You create a *patch
         module* (a module that monkey-patches other module by
         adding/replacing/wrapping/deleting subroutines of target module) by
-        subclassing Module::Patch and providing the patches_spec in
+        subclassing Module::Patch and providing the patches specification in
         patch_data() method.
 
         Patch module should be named *Some::Module*::Patch::*YourCategory*.
@@ -120,21 +120,19 @@ FUNCTIONS
   patch_package($package, $patches_spec, \%opts) => HANDLE
     Patch target package $package with a set of patches.
 
-    $patches_spec is an arrayref containing a series of patch specification.
-    Patch specification is a hashref containing these keys: "action"
-    (string, required; either 'wrap', 'add', 'replace', 'add_or_replace',
-    'delete'), "mod_version" (string/regex or array of string/regex, can be
-    ':all' to mean all versions; optional; defaults to ':all'). "sub_name"
-    (string/regex or array of string/regex, subroutine(s) to patch, can be
-    ':all' to mean all subroutine, ':public' to mean all public subroutines
-    [those not prefixed by "_"], ':private' to mean all private), "code"
-    (coderef, not required if "action" is 'delete').
+    $patches_spec is an arrayref containing a series of patches
+    specifications. Each patch specification is a hashref containing these
+    keys: "action" (string, required; either 'wrap', 'add', 'replace',
+    'add_or_replace', 'delete'), "mod_version" (string/regex or array of
+    string/regex, can be ':all' to mean all versions; optional; defaults to
+    ':all'). "sub_name" (string/regex or array of string/regex,
+    subroutine(s) to patch, can be ':all' to mean all subroutine, ':public'
+    to mean all public subroutines [those not prefixed by "_"], ':private'
+    to mean all private), "code" (coderef, not required if "action" is
+    'delete').
 
-    Die if there is conflict with other patch modules (patchsets), for
-    example if target module has been patched 'delete' and another patch
-    wants to 'wrap' it.
-
-    NOTE: conflict checking with other patchsets not yet implemented.
+    Die if there is conflict with other patch modules, for example if target
+    module has been patched 'delete' and another patch wants to 'wrap' it.
 
     Known options:
 
@@ -177,10 +175,10 @@ FAQ
          use Target::Module::Patch::Foo; # patches foo
          use Target::Module; # by default export foo
 
-         foo(); # user gets the unpatched version
+         foo(); # user gets the patched version
 
         Since 0.16, Module::Patch already warns this (unless "-load_target"
-        is set to false).
+        or "-warn_target_loaded" is set to false).
 
 SEE ALSO
     Monkey::Patch::Action
@@ -198,7 +196,7 @@ AUTHOR
     Steven Haryanto <stevenharyanto@gmail.com>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2012 by Steven Haryanto.
+    This software is copyright (c) 2013 by Steven Haryanto.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
