--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Module-Patch
 
+0.19    2014-05-26 (SHARYANTO)
+
+        - No functional changes.
+
+        - App 'use experimental smartmatch' for perl 5.18+.
+
+
 0.18    2013-11-11 (SHARYANTO)
 
         - Do not warn if target module was already loaded by the time a patch
