--- a/README
+++ b/README
@@ -2,7 +2,8 @@ NAME
     Module::Patch - Patch package with a set of patches
 
 VERSION
-    version 0.18
+    This document describes version 0.19 of Module::Patch (from Perl
+    distribution Module-Patch), released on 2014-05-26.
 
 SYNOPSIS
     To use Module::Patch directly:
@@ -141,8 +142,6 @@ FUNCTIONS
         Force patching even if target module version does not match. The
         default is to warn and skip patching.
 
-    None are exported by default, but they are exportable.
-
 FAQ
   This module does not work! The target module does not get patched!
     It probably does. Some of the common mistakes are:
@@ -213,7 +212,7 @@ AUTHOR
     Steven Haryanto <stevenharyanto@gmail.com>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2013 by Steven Haryanto.
+    This software is copyright (c) 2014 by Steven Haryanto.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
