--- a/README
+++ b/README
@@ -2,8 +2,8 @@ NAME
     Module::Patch - Patch package with a set of patches
 
 VERSION
-    This document describes version 0.19 of Module::Patch (from Perl
-    distribution Module-Patch), released on 2014-05-26.
+    This document describes version 0.20 of Module::Patch (from Perl
+    distribution Module-Patch), released on 2014-12-05.
 
 SYNOPSIS
     To use Module::Patch directly:
@@ -199,7 +199,7 @@ HOMEPAGE
 
 SOURCE
     Source repository is at
-    <https://github.com/sharyanto/perl-Module-Patch>.
+    <https://github.com/perlancar/perl-Module-Patch>.
 
 BUGS
     Please report any bugs or feature requests on the bugtracker website
@@ -209,10 +209,10 @@ BUGS
     to an existing test-file that illustrates the bug or desired feature.
 
 AUTHOR
-    Steven Haryanto <stevenharyanto@gmail.com>
+    perlancar <perlancar@cpan.org>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2014 by Steven Haryanto.
+    This software is copyright (c) 2014 by perlancar@cpan.org.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
